syntax = "proto3";

package article.api.user;

option go_package = "github.com/ispec-inc/monorepo/go/proto/article/api/rest/user";

import "article/view/user.proto";
import "validate/validate.proto";

message GetRequest {}

message GetResponse {
  article.view.User user = 1;
}

message CreateRequest {
  string name = 1;
  string description = 2;
  string email = 3 [(validate.rules).string.email = true];
}

message CreateResponse {
  repeated article.view.User users = 1;
}
